Migrate to java15