@@ -20,8 +20,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
                     <configuration>
-                        <source>1.11</source>
-                        <target>1.11</target>
+                        <source>1.15</source>
+                        <target>1.15</target>
                     </configuration>
                 </plugin>
             </plugins>
@@ -33,6 +33,10 @@
                 <version>0.0.6</version>
                 <configuration>
                     <mainClass>top.viewv.controller.MainApp</mainClass>
+                    <options>
+                        <option> --add-opens </option>
+                        <option> java.base/java.lang.reflect=ALL-UNNAMED </option>
+                    </options>
                 </configuration>
             </plugin>
             <plugin>
@@ -64,8 +68,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>15</source>
+                    <target>15</target>
                 </configuration>
             </plugin>
         </plugins>
